<resources>
    <string name="app_name">MoodTracker</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>

    <string name="options_menu_day_values">All values</string>
    <string name="options_menu_daily_avg">Day</string>
    <string name="options_menu_weekly_avg">Week</string>
    <string name="options_menu_monthly_avg">Month</string>

    <string name="options_menu_export">export</string>
    <string name="options_menu_import">import</string>

    <string name="options_menu_share">Share</string>
    <string name="options_menu_signIn">Sign In</string>
    <string name="options_menu_signOut">Sign Out</string>

    <string name="share_chooser_text">Share most recent mood...</string>

    <string name="message_no_moods_yet">No moods yet!</string>
    <string name="message_still_loading">Data not yet loaded.</string>

    <!-- used for sharing messages -->
    <string name="share_message_subject">My mood just changed...</string>
    <!-- this is optional-->
    <string name="share_message_text">I\'m now in a %1$s!</string>
    <!-- this is mandatory -->

    <string name="textual_mood_very_good">very good</string>
    <string name="textual_mood_good">good</string>
    <string name="textual_mood_bad">bad mood</string>
    <string name="textual_mood_very_bad">very bad mood</string>
    <!-- /used for sharing messages -->

    <!-- diagram x-axis date formats -->
    <string name="history_date_format_quarterDaily">EEE\', \'MMM\' \'dd\'. \'\'\'yy\' | \'K a</string>
    <string name="history_date_format_daily">EEE\', \'MMM\' \'dd\'. \'\'\'yy</string>
    <string name="history_date_format_weekly">\'Week \'W\', \'MMMM\' \'\'\'yy</string>
    <string name="history_date_format_monthly">MMMM yyyy</string>
    <!-- /diagram x-axis date formats -->


    <string name="title_activity_simple_import_export">SimpleImportExportActivity</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_main_wear">MainWearActivity</string>

    <string name="gcmRegistrationError">An error occurred during registration. Trying again later</string>
    <string name="gcmRegistrationSuccess">Device registered, registration ID= %1s</string>
</resources>
