<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/menu_item_share"
        android:showAsAction="always"
        android:title="Share"
        android:icon="@android:drawable/ic_menu_share" />

    <item android:id="@+id/menu_item_history_month_avg"
        android:title="@string/options_menu_monthly_avg"
        android:showAsAction="never"/>
    <item android:id="@+id/menu_item_history_weekly_avg"
        android:title="@string/options_menu_weekly_avg"
        android:showAsAction="never"/>
    <item android:id="@+id/menu_item_history_daily_avg"
        android:title="@string/options_menu_daily_avg"
        android:showAsAction="never"/>
    <item android:id="@+id/menu_item_history_day_values"
        android:title="@string/options_menu_day_values"
        android:showAsAction="never"/>

    <item android:id="@+id/menu_item_export"
        android:title="@string/options_menu_export"
        android:showAsAction="never"/>

    <item android:id="@+id/menu_item_import"
        android:title="@string/options_menu_import"
        android:showAsAction="never"/>
</menu>